@@ -1,73 +1,58 @@
 package com.manager.hotel.service.impl;
 
-import com.manager.hotel.dao.jpa.JpaRoomDao;
+import com.manager.hotel.dao.RoomDao;
 import com.manager.hotel.model.dto.RoomDto;
 import com.manager.hotel.model.entity.Criteria;
 import com.manager.hotel.model.entity.Room;
 import com.manager.hotel.model.enums.RoomStatus;
 import com.manager.hotel.service.RoomService;
 import com.manager.hotel.service.mapper.RoomMapper;
-import lombok.RequiredArgsConstructor;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 
 @Slf4j
 @Service
-@Transactional
-@RequiredArgsConstructor
+@AllArgsConstructor
 public class JpaRoomService implements RoomService {
 
+    private final RoomDao dao;
     private final RoomMapper mapper;
-    private final JpaRoomDao dao;
 
     @Override
-    @Transactional(readOnly = true)
     public List<RoomDto> findAll() {
-        return mapper.toListDto(
-                dao.findAll());
+        return mapper.toListDto(dao.findAll());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<RoomDto> findAvailableRooms(
-            final Criteria criteria) {
-        return mapper.toListDto(
-                dao.findByCriteria(criteria));
+    public List<RoomDto> findAvailableRooms(final Criteria criteria) {
+        return mapper.toListDto(dao.findAll());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public Optional<Room> findAvailable(
-            final Criteria criteria) {
-        List<Room> rooms = dao.findByCriteria(criteria);
+    public Optional<Room> findAvailable(final Criteria criteria) {
+        List<Room> rooms = dao.findAll();
         return rooms.isEmpty()
                 ? Optional.empty()
-                : Optional.of(rooms.get(0));
+                : Optional.of(rooms.getFirst());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public Optional<Room> findById(
-            final Long id) {
-        return dao.findRoomById(id);
+    public Optional<Room> findById(final Long id) {
+        return dao.findById(id);
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
-    public Room update(
-            final Room room) {
-        return dao.update(room).orElse(new Room());
+    public Room update(final Room room) {
+        return dao.save(room);
     }
 
     @Override
-    public RoomDto save(
-            final Room room) {
-        return mapper.toDto(
-                dao.save(room));
+    public RoomDto save(final Room room) {
+        return mapper.toDto(dao.save(room));
     }
 
     @Override
@@ -83,12 +68,9 @@ public class JpaRoomService implements RoomService {
         }
     }
 
-
     @Override
-    public Optional<RoomDto> getById(
-            final Long id) {
-        return Optional.of(mapper
-                .toDto(findById(id)
-                        .orElse(new Room())));
+    public Optional<RoomDto> getById(final Long id) {
+        return Optional.of(mapper.toDto(findById(id)
+                .orElse(new Room())));
     }
 }
